--- a/index.html
+++ b/index.html
@@ -270,6 +270,6 @@
 	}
 </script>
 <footer style="text-align: center;">
-  <p>Done by <a href="mailto:abhilash.kr@rakuten.com">Abhilash K R</a></p>
+  <p>Done by <a href="mailto:abhilash.khokle@gmail.com">Abhilash K R</a></p>
 </footer>
 </html>
